--- a/image-alpine-jdk9mvn/Dockerfile
+++ b/image-alpine-jdk9mvn/Dockerfile
@@ -1,3 +1,5 @@
 FROM alpine
-RUN apk update && apk add openjdk9 && apk add maven
-CMD top
+RUN apk update && apk add openjdk11 && apk add maven
+WORKDIR /app
+COPY . .
+CMD java Hello.java
