--- a/dc-mongodb/docker-compose.yml
+++ b/dc-mongodb/docker-compose.yml
@@ -1,13 +1,27 @@
-version: '2'
-
+version: '3'
 services:
-  mongo:
+  database:
     image: mongo
+    container_name: 'my-mongo-container'
+    environment:
+      - MONGO_INITDB_DATABASE=prototype
+      - MONGO_INITDB_ROOT_USERNAME=root
+      - MONGO_INITDB_ROOT_PASSWORD=abcd1234
+    volumes:
+      - ./init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
+      - /dockvol/mongodb-dc:/data/db
     ports:
       - "27017:27017"
-    volumes_from:
-      - mongodata
-  mongodata:
-    image: tianon/true
-    volumes:
-      - /data/db
+  mongo-express:
+    links:
+      - database:mongo  # link to the database service and mongo is the alias in mongo-express service to connect to the database service
+    image: mongo-express
+    #restart: always
+    ports:
+      - 7030:8081
+    environment:
+      ME_CONFIG_OPTIONS_EDITORTHEME: 3024-night
+      ME_CONFIG_BASICAUTH_USERNAME: root
+      ME_CONFIG_BASICAUTH_PASSWORD: abcd1234 
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: abcd1234
